// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumb [common] example testing should match snapshot(s) for 1.basic 1`] = `
<nav
  className="lucid-Breadcrumb"
>
  <ul
    className="lucid-Breadcrumb-List"
  >
    <li
      className="lucid-Breadcrumb-Item"
      key=".$home"
    >
      <a
        href="#"
      >
        <HomeIcon />
      </a>
      <SeparatorIcon
        className="lucid-Breadcrumb-SeparatorIcon"
      />
    </li>
    <li
      className="lucid-Breadcrumb-Item"
      key=".$list"
    >
      <a
        href="#"
      >
        List
      </a>
      <SeparatorIcon
        className="lucid-Breadcrumb-SeparatorIcon"
      />
    </li>
    <li
      className="lucid-Breadcrumb-Item"
      key=".$item"
    >
      Item
    </li>
  </ul>
</nav>
`;

exports[`Breadcrumb [common] example testing should match snapshot(s) for 2.map 1`] = `
<nav
  className="lucid-Breadcrumb"
>
  <ul
    className="lucid-Breadcrumb-List"
  >
    <li
      className="lucid-Breadcrumb-Item"
      key=".0:$Foo"
    >
      <a
        href="#"
      >
        Foo
      </a>
      <SeparatorIcon
        className="lucid-Breadcrumb-SeparatorIcon"
      />
    </li>
    <li
      className="lucid-Breadcrumb-Item"
      key=".0:$Bar"
    >
      <a
        href="#"
      >
        Bar
      </a>
      <SeparatorIcon
        className="lucid-Breadcrumb-SeparatorIcon"
      />
    </li>
    <li
      className="lucid-Breadcrumb-Item"
      key=".0:$Baz"
    >
      <a
        href="#"
      >
        Baz
      </a>
      <SeparatorIcon
        className="lucid-Breadcrumb-SeparatorIcon"
      />
    </li>
    <li
      className="lucid-Breadcrumb-Item"
      key=".$qux"
    >
      Qux
    </li>
  </ul>
</nav>
`;
